Added sass and other dependency

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <main>
   <h1>Hello </h1>
- <!--  <img src="../../public/images/angular.png"> -->
+   <img src="../../public/images/imgpsh_fullsize.png">
 </main>
