--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,43 @@
-<main>
-  <h1>Hello </h1>
-   <img src="../../public/images/imgpsh_fullsize.png">
-</main>
+<!--<main>-->
+  <!--<h1>Hello </h1>-->
+   <!--<img src="../../public/images/imgpsh_fullsize.png">-->
+<!--</main>-->
+<div class="row vertical-center">
+    <div class="vertical-align container ">
+        <div class="col-md-8 col-sm-8">
+            <div class="logo-container col-sm-offset-3 col-md-offset-3">
+                <div class="logo pull-left">
+                    <img src="../../public/images/AutoiQ_2016_RGB.png"
+                         alt="AutoIQ"
+                         height="127"
+                         width="400"/>
+                </div>
+                <div class="clearfix"></div>
+                <div class="information-container pull-left text-left">
+                    <span class="glyphicon glyphicon-info-sign"></span>
+                    <div class="autoIQ-text"><h2>DID YOU KNOW !!</h2></div>
+                    <div class="autoIQ-text"><h5>YOU CAN CUSTOMIZE AUTOIQ ACCORDING TO YOUR REQUIREMENTS.</h5></div>
+                </div>
+            </div>
+
+        </div>
+        <div class="col-md-4 col-sm-4 right-box pull-right">
+            <div class="login-container">
+                <div id="error-box"></div>
+                <form accept-charset="UTF-8" role="form">
+                    <fieldset>
+                        <div class="form-group">
+                            <label><h4>EMAIL/USERNAME</h4></label>
+                            <input class="form-control" placeholder="someone@email.com" name="userName" type="text">
+                        </div>
+                        <div class="form-group">
+                            <label><h4>PASSWORD</h4></label>
+                            <input class="form-control" placeholder="*********" name="password" type="password" value="">
+                        </div>
+                        <input class="btn btn-lg btn-success btn-autoIQ btn-block" type="submit" value="Login">
+                    </fieldset>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
