--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,7 @@
-<!--<main>-->
-  <!--<h1>Hello </h1>-->
-   <!--<img src="../../public/images/imgpsh_fullsize.png">-->
-<!--</main>-->
 <div class="row vertical-center">
-    <div class="vertical-align container ">
+    <div class="container">
         <div class="col-md-8 col-sm-8">
-            <div class="logo-container col-sm-offset-3 col-md-offset-3">
+            <div class="logo-container col-sm-offset-2 col-md-offset-2">
                 <div class="logo pull-left">
                     <img src="../../public/images/AutoiQ_2016_RGB.png"
                          alt="AutoIQ"
@@ -14,9 +10,13 @@
                 </div>
                 <div class="clearfix"></div>
                 <div class="information-container pull-left text-left">
-                    <span class="glyphicon glyphicon-info-sign"></span>
-                    <div class="autoIQ-text"><h2>DID YOU KNOW !!</h2></div>
-                    <div class="autoIQ-text"><h5>YOU CAN CUSTOMIZE AUTOIQ ACCORDING TO YOUR REQUIREMENTS.</h5></div>
+                    <div class="col-md-1 col-sm-1 info-glyphicon">
+                        <span class="glyphicon glyphicon-info-sign"></span>
+                    </div>
+                    <div class="col-md-11 col-sm-11">
+                        <div class="autoIQ-text"><h2>DID YOU KNOW !!</h2></div>
+                        <div class="autoIQ-text"><h5>YOU CAN CUSTOMIZE AUTOIQ ACCORDING TO YOUR REQUIREMENTS.</h5></div>
+                    </div>
                 </div>
             </div>
 
