--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="row vertical-center">
+<div class="row vertical-center login-conatiner">
     <div class="container">
         <div class="col-md-8 col-sm-8">
             <div class="logo-container col-sm-offset-2 col-md-offset-2">
