--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,9 +1,9 @@
-<div class="row vertical-center login-conatiner">
+<div class="row vertical-center login-container">
     <div class="container">
         <div class="col-md-8 col-sm-8">
             <div class="logo-container col-sm-offset-2 col-md-offset-2">
                 <div class="logo pull-left">
-                    <img src="../../public/images/AutoiQ_2016_RGB.png"
+                    <img src="../../../public/images/AutoiQ_2016_RGB.png"
                          alt="AutoIQ"
                          height="127"
                          width="400"/>
@@ -24,17 +24,23 @@
         <div class="col-md-4 col-sm-4 right-box pull-right">
             <div class="login-container">
                 <div id="error-box"></div>
-                <form accept-charset="UTF-8" role="form">
+                <form accept-charset="UTF-8" role="form" #myForm="ngForm" (submit)="handleSubmit($event)" novalidate>
                     <fieldset>
                         <div class="form-group">
                             <label><h4>EMAIL/USERNAME</h4></label>
-                            <input class="form-control" placeholder="someone@email.com" name="userName" type="text">
+                            <input [(ngModel)]="username" #userName="ngModel" class="form-control" placeholder="someone@email.com" name="userName" type="text" required>
+                            <div [hidden]="userName.valid || userName.pristine">
+                                <strong>Username required</strong>
+                            </div>
                         </div>
                         <div class="form-group">
                             <label><h4>PASSWORD</h4></label>
-                            <input class="form-control" placeholder="*********" name="password" type="password" value="">
+                            <input [(ngModel)]="password" #pwd="ngModel" class="form-control" placeholder="*********" name="password" type="password" value="" required>
+                            <div [hidden]="pwd.valid || pwd.pristine">
+                                <strong>password required</strong>
+                            </div>
                         </div>
-                        <input class="btn btn-lg btn-success btn-autoIQ btn-block" type="submit" value="Login">
+                        <input class="btn btn-lg btn-success btn-autoIQ btn-block" type="submit" value="Login" [disabled]="!myForm.form.valid">
                     </fieldset>
                 </form>
             </div>
