--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,6 +9,18 @@
         <a [routerLink] ="['']">Login</a>
       </li>
     </ul>
+    <ul class="nav navbar-nav navbar-right">
+      <li class="dropdown theme-selector">
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Themes <b class="caret"></b></a>
+        <ul class="dropdown-menu">
+          <li
+            (click)="selectTheme(theme)"
+            *ngFor="let theme of themes">
+            <a>{{theme}}</a>
+          </li>
+        </ul>
+      </li>
+    </ul>
   </nav>
   <div class="landing-content">
     <div class="container">
