--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,49 +1,80 @@
-<div class="row vertical-center login-container">
-    <div class="container">
-        <div class="col-md-8 col-sm-8">
-            <div class="logo-container col-sm-offset-2 col-md-offset-2">
-                <div class="logo pull-left">
-                    <img src="../../../public/images/AutoiQ_2016_RGB.png"
-                         alt="AutoIQ"
-                         height="127"
-                         width="400"/>
-                </div>
-                <div class="clearfix"></div>
-                <div class="information-container pull-left text-left">
-                    <div class="col-md-1 col-sm-1 info-glyphicon">
-                        <span class="glyphicon glyphicon-info-sign"></span>
-                    </div>
-                    <div class="col-md-11 col-sm-11">
-                        <div class="autoIQ-text"><h2>DID YOU KNOW !!</h2></div>
-                        <div class="autoIQ-text"><h5>YOU CAN CUSTOMIZE AUTOIQ ACCORDING TO YOUR REQUIREMENTS.</h5></div>
-                    </div>
-                </div>
-            </div>
-
+<div class="row vertical-center login-container no-padding">
+  <div class="container-fluid no-padding">
+    <div class="col-md-8 col-sm-8 left-box hidden-xs">
+      <div class="logo-container col-sm-offset-2 col-md-offset-2">
+        <div class="logo-text pull-left">
+          <img src="../../../public/images/autoiq_logo_white.png"
+               alt="AutoIQ"
+               class="img-responsive"/>
         </div>
-        <div class="col-md-4 col-sm-4 right-box pull-right">
-            <div class="login-container">
-                <div id="error-box"></div>
-                <form accept-charset="UTF-8" role="form" #myForm="ngForm" (submit)="handleSubmit($event)" novalidate>
-                    <fieldset>
-                        <div class="form-group">
-                            <label><h4>EMAIL/USERNAME</h4></label>
-                            <input [(ngModel)]="username" #userName="ngModel" class="form-control" placeholder="someone@email.com" name="userName" type="text" required>
-                            <div [hidden]="userName.valid || userName.pristine">
-                                <strong>Username required</strong>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label><h4>PASSWORD</h4></label>
-                            <input [(ngModel)]="password" #pwd="ngModel" class="form-control" placeholder="*********" name="password" type="password" value="" required>
-                            <div [hidden]="pwd.valid || pwd.pristine">
-                                <strong>password required</strong>
-                            </div>
-                        </div>
-                        <input class="btn btn-lg btn-success btn-autoIQ btn-block" type="submit" value="Login" [disabled]="!myForm.form.valid">
-                    </fieldset>
-                </form>
-            </div>
+        <div class="clearfix"></div>
+        <div class="information-container pull-left text-left">
+          <table class="table-responsive border-less">
+            <tr>
+              <td>
+                <div class="info-glyphicon">
+                  <span class="glyphicon glyphicon-info-sign"></span>
+                </div>
+              </td>
+              <td>
+                <div class="">
+                  <div class="autoiq-text autoiq-larger-text"><h2>DID YOU KNOW !!</h2></div>
+                  <div class="autoiq-text"><h5>YOU CAN CUSTOMIZE AUTOIQ ACCORDING TO YOUR REQUIREMENTS.</h5></div>
+                </div>
+              </td>
+            </tr>
+          </table>
         </div>
+      </div>
     </div>
+    <div class="col-md-4 col-sm-4 col-xs-12 right-box pull-right">
+      <div class="login-box text-default">
+        <div class="mobile-logo-box visible-xs-block">
+          <div class="autoiq-logo text-center">
+            <img src="../../../public/images/AutoiQ_2016_RGB.png"
+                 alt="AutoIQ"
+                 class="img-responsive"/>
+          </div>
+        </div>
+        <div class="error-box"
+             [hidden]="(userName.valid || userName.pristine) &&
+             (pwd.valid || pwd.pristine)">
+             <span>INVALID USERNAME PASSWORD</span>
+        </div>
+        <form accept-charset="UTF-8" role="form" #myForm="ngForm" (submit)="handleSubmit($event)" novalidate>
+          <fieldset>
+            <div class="form-group">
+              <label><h4>USERNAME</h4></label>
+              <input
+                [(ngModel)]="username"
+                #userName="ngModel"
+                class="form-control"
+                placeholder="someone@email.com"
+                name="userName" type="text"
+                required >
+            </div>
+            <div class="form-group">
+              <label><h4>PASSWORD</h4></label>
+              <input
+                [(ngModel)]="password"
+                #pwd="ngModel"
+                class="form-control"
+                placeholder="*********"
+                name="password"
+                type="password"
+                value=""
+                required>
+            </div>
+            <div class="form-group">
+              <input
+                class="btn btn-success btn-block"
+                type="submit"
+                value="Login"
+                [disabled]="!myForm.form.valid">
+            </div>
+          </fieldset>
+        </form>
+      </div>
+    </div>
+  </div>
 </div>
